--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/radar-chart.js",
   "style": "src/radar-chart.css",
   "dependencies": {
-    "d3": "~3.5.5"
+    "d3": "^6.5.0"
   },
   "directories": {
     "example": "example"
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alangrafu/radar-chart-d3.git"
+    "url": "git+https://github.com/GutherieDEV/radar-chart-d3.git"
   },
   "keywords": [
     "d3",
@@ -24,9 +24,9 @@
     "radar-chart",
     "visualization"
   ],
-  "author": "Alvaro Graves <alvaro@graves.cl> (http://graves.cl)",
+  "author": "Jason Baker (forked: Alvaro Graves <alvaro@graves.cl>) (http://graves.cl)",
   "bugs": {
-    "url": "https://github.com/alangrafu/radar-chart-d3/issues"
+    "url": "https://github.com/GutherieDEV/radar-chart-d3/issues"
   },
-  "homepage": "https://github.com/alangrafu/radar-chart-d3#readme"
+  "homepage": "https://github.com/GutherieDEV/radar-chart-d3#readme"
 }
